[package]
name = "pants-off-podrick"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.15.0"
anyhow = "1.0.71"
serenity = { version = "0.11.5",  default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "chrono"]  }
shuttle-secrets = "0.15.0"
shuttle-serenity = "0.15.0"
tokio = "1.28.0"
tracing = "0.1.37"
chrono = "0.4.24"
time = "0.3.20"
regex = "1.8.1"
prettytable = "0.10.0"
futures = "0.3.28"
num-traits = "0.2.15"
chrono-tz = "0.8.2"
